# logging

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  logging.cpp  logging.h  logging_message.cpp  logging_message.h
test/: CMakeLists.txt
test/src/logging/: logging_message_test.cpp  logging_test.cpp
